adds link to GitHub repo

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <div class="speed">
         Speed: <span id="speed-value">0</span>
         </div>
+        <div class="github">
+        	<a href="https://github.com/relluf/chatgptetris">github</a>
+        </div>
     </div>
 
     <script src="script.js"></script>
