adds link to OpenAI

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         <div class="github">
         	<a href="https://github.com/relluf/chatgptetris">github</a>
         </div>
+        <div class="openai">
+        	<a href="https://chat.openai.com/share/f4af545f-77dd-403a-8504-a119deac7d1e">openai</a>
+        </div>
     </div>
 
     <script src="script.js"></script>
